--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="eye right"></div>
 
         <div class="mouth">
-          <img src="/img/mouth.svg" alt="" />
+          <img src="./img/mouth.svg" alt="" />
         </div>
         <div class="cheek left"></div>
         <div class="cheek right"></div>
